--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -4,10 +4,12 @@
     {% include 'global/partials/head.html' %}
 </head>
 <body>
-    {% include 'global/partials/header.html'%}
+    {% include 'global/partials/header.html' %}
+    {% include 'global/partials/_messages.html' %}
     <main class="content">
         {% block content %}
         {% endblock content %}
+        {% include "global/partials/_pagination.html"%}
     </main>
 </body>
 </html>
